added bash to code block

--- a/1531.md
+++ b/1531.md
@@ -9,7 +9,7 @@ Course Email: cs1531@cse.unsw.edu.au
 - Labs due on Monday 5pm the following week
 
 ## Git Comands
-```
+```bash
 git clone
 git add 
 # git add --all to stage all changes
