changed to zsh and added $

--- a/1531.md
+++ b/1531.md
@@ -9,14 +9,14 @@ Course Email: cs1531@cse.unsw.edu.au
 - Labs due on Monday 5pm the following week
 
 ## Git Comands
-```bash
-git clone
-git add 
+```zsh
+$ git clone
+$ git add 
 # git add --all to stage all changes
-git commit -m 
-git push
-git status
-git log
-git pull
-git diff 
+$ git commit -m 
+$ git push
+$ git status
+$ git log
+$ git pull
+$ git diff 
 ``` 
