lecture 1 notes (intro and git commands)

--- a/1531.md
+++ b/1531.md
@@ -5,11 +5,11 @@ Course Email: cs1531@cse.unsw.edu.au
 - Group Project - 60%
 - Individual Project - 30%
 
--Tutorial attendance required  
+- Tutorial attendance required  
 - Labs due on Monday 5pm the following week
 
-## Git Comands
-```zsh
+## Git Commands
+```bash
 $ git clone
 $ git add 
 # git add --all to stage all changes
@@ -20,3 +20,4 @@ $ git log
 $ git pull
 $ git diff 
 ``` 
+
