lecture 2 notes (git working as a team and js

--- a/1531.md
+++ b/1531.md
@@ -3,21 +3,73 @@
 Course Email: cs1531@cse.unsw.edu.au
 - Labs - 10%
 - Group Project - 60%
-- Individual Project - 30%
-
+- Individual Project - 30% 
 - Tutorial attendance required  
 - Labs due on Monday 5pm the following week
 
 ## Git Commands
 ```bash
-$ git clone
-$ git add 
-# git add --all to stage all changes
-$ git commit -m 
-$ git push
-$ git status
-$ git log
-$ git pull
-$ git diff 
-``` 
+$ git clone <repo>                  # clone repo to current directory
+$ git add                           # git add --all to stage all changes
+$ git commit -m                     # commit any staged files
+$ git push                          # push changes to remote repo
+$ git pull                          # pull changes from remote repo
+$ git status                        # check any stages, unstaged or untracked files
+$ git log                           # check commit log
+$ git checkout "branch"             # switch to branch
+$ git checkout -b "branch_name"     # create a new branch
+$ git push -u origin "branch_name"  # initialise new branch in remote repo
+$ git merge "branch_name"           # merge branch_name to main branch 
+```    
+
+## Javascript 
+Javascript is a high level, dynamically typed, interpreted, object-oriented language that is massively used in web development.
+
+
+#### Node
+- NodeJS is a command line interface that **interprets** Javascript code within a runtime environment that is built on Google's V8 engine. 
+- NodeJS is an **interpreted language** instead of a compiled language, meaning it is compiled and run as part of the same step.
+ 
+#### Variables, Printing
+```js
+const name = 'Denton';      // Constant value that cannot be changed
+let age = 18;               // Variable type, can be changed from numbers to strings etc. 
+console.log(name, age);
+```
+
+#### Strings
+Can use either ' ' or " " for strings in js, when you need to mix variables and strings use `` to create a string literal
+```js
+// Normal String Example
+let sentence = 'My';
+sentence = sentence + ' name is';
+sentence += ' Pikachu';
+console.log(sentence);
+
+// String literal Example  
+const age = 7;
+const myname = 'Pikachu';
+const phrase = `My name is ${myname} and I am ${age}`;
+console.log(phrase);
+```
+
+#### Other 
+`if, else if, else, while` are very similar to C.
+
+#### For in and For of loops
+- For In statement loops through the properties of an array. 
+- For Of statement loops through the values of an array.
+```js
+for (const i in items) {
+    console.log(items[i]);
+}
+
+for (const item_i of items) {
+      console.log(item_i);
+}
+```
+#### Objects
+- Objects are variables that contain many name: values pairs.
+- `const car = {type:"Fiat", model:"500", color:"white"};`
+- Normally declared with `const`
 
