lecture 2 notes (git working as a team and js

--- a/1531.md
+++ b/1531.md
@@ -34,7 +34,7 @@ Javascript is a high level, dynamically typed, interpreted, object-oriented lang
 ```js
 const name = 'Denton';      // Constant value that cannot be changed
 let age = 18;               // Variable type, can be changed from numbers to strings etc. 
-console.log(name, age);
+console.log(name, age);     // Does on a newline
 ```
 
 #### Strings
@@ -72,4 +72,6 @@ for (const item_i of items) {
 - Objects are variables that contain many name: values pairs.
 - `const car = {type:"Fiat", model:"500", color:"white"};`
 - Normally declared with `const`
+
+Can access elements in a object by `object.element` or `object[]`
 
