lecture 2 notes (git working as a team and js

--- a/1531.md
+++ b/1531.md
@@ -73,5 +73,5 @@ for (const item_i of items) {
 - `const car = {type:"Fiat", model:"500", color:"white"};`
 - Normally declared with `const`
 
-Can access elements in a object by `object.element` or `object[]`
+Can access elements in a object by `object.element` or `object['element']`
 
