added tutorial link

--- a/1531.md
+++ b/1531.md
@@ -7,6 +7,8 @@ Course Email: cs1531@cse.unsw.edu.au
 - Tutorial attendance required  
 - Labs due on Monday 5pm the following week
 
+*TUTORIAL CODE LINK - https://nw-syd-gitlab.cseunsw.tech/z5363488/comp1531-23t3-h09b*
+
 ## Git Commands
 ```bash
 $ git clone <repo>                  # clone repo to current directory
