Week 2 Lecture 1 Notes

--- a/1531.md
+++ b/1531.md
@@ -1,15 +1,19 @@
 # 1531 - Software Engineering Fundamentals
-## General Info 
+
+## General Info
+
 Course Email: cs1531@cse.unsw.edu.au
+
 - Labs - 10%
 - Group Project - 60%
-- Individual Project - 30% 
-- Tutorial attendance required  
+- Individual Project - 30%
+- Tutorial attendance required
 - Labs due on Monday 5pm the following week
 
-*TUTORIAL CODE LINK - https://nw-syd-gitlab.cseunsw.tech/z5363488/comp1531-23t3-h09b*
+_TUTORIAL CODE LINK - https://nw-syd-gitlab.cseunsw.tech/z5363488/comp1531-23t3-h09b_
 
 ## Git Commands
+
 ```bash
 $ git clone <repo>                  # clone repo to current directory
 $ git add                           # git add --all to stage all changes
@@ -21,59 +25,95 @@ $ git log                           # check commit log
 $ git checkout "branch"             # switch to branch
 $ git checkout -b "branch_name"     # create a new branch
 $ git push -u origin "branch_name"  # initialise new branch in remote repo
-$ git merge "branch_name"           # merge branch_name to main branch 
-```    
+$ git merge "branch_name"           # merge branch_name to main branch
+```
 
-## Javascript 
+## Javascript
+
 Javascript is a high level, dynamically typed, interpreted, object-oriented language that is massively used in web development.
 
-
 #### Node
-- NodeJS is a command line interface that **interprets** Javascript code within a runtime environment that is built on Google's V8 engine. 
+
+- NodeJS is a command line interface that **interprets** Javascript code within a runtime environment that is built on Google's V8 engine.
 - NodeJS is an **interpreted language** instead of a compiled language, meaning it is compiled and run as part of the same step.
- 
+
 #### Variables, Printing
+
 ```js
-const name = 'Denton';      // Constant value that cannot be changed
-let age = 18;               // Variable type, can be changed from numbers to strings etc. 
-console.log(name, age);     // Does on a newline
+const name = "Denton"; // Constant value that cannot be changed
+let age = 18; // Variable type, can be changed from numbers to strings etc.
+console.log(name, age); // Does on a newline
 ```
 
 #### Strings
+
 Can use either ' ' or " " for strings in js, when you need to mix variables and strings use `` to create a string literal
+
 ```js
 // Normal String Example
-let sentence = 'My';
-sentence = sentence + ' name is';
-sentence += ' Pikachu';
+let sentence = "My";
+sentence = sentence + " name is";
+sentence += " Pikachu";
 console.log(sentence);
 
-// String literal Example  
+// String literal Example
 const age = 7;
-const myname = 'Pikachu';
+const myname = "Pikachu";
 const phrase = `My name is ${myname} and I am ${age}`;
 console.log(phrase);
 ```
 
-#### Other 
+#### Other
+
 `if, else if, else, while` are very similar to C.
 
 #### For in and For of loops
-- For In statement loops through the properties of an array. 
+
+- For In statement loops through the properties of an array.
 - For Of statement loops through the values of an array.
+
 ```js
 for (const i in items) {
-    console.log(items[i]);
+  console.log(items[i]);
 }
 
 for (const item_i of items) {
-      console.log(item_i);
+  console.log(item_i);
 }
 ```
+
 #### Objects
+
 - Objects are variables that contain many name: values pairs.
 - `const car = {type:"Fiat", model:"500", color:"white"};`
 - Normally declared with `const`
 
 Can access elements in a object by `object.element` or `object['element']`
 
+## npm (node package manager)
+
+```bash
+npm init                    # setup a repo to use npm, creates a package.json file
+npm install [dependency]    # install a dependency
+```
+
+`package.json` - Stores meta data about the project including a list of dependencies to install (committed to git).
+
+`package-lock.json` - Stores versioning information about dependencies to ensure everyone has the right versions (committed to git).
+
+`node_modules/` - Location of dependencies installed locally (not commited to git).
+
+### Importing Libraries
+
+```js
+// importing external libraries
+import path from "path";
+
+// default export (can only be used once)
+export default module;
+import module from "path";
+
+// named export (for multiple functions)
+export { module_one, module_two };
+import { module_one, module_two } from "path";
+```
