week 2 lecture 1 notes

--- a/1531.md
+++ b/1531.md
@@ -94,7 +94,7 @@ Can access elements in a object by `object.element` or `object['element']`
 
 ```bash
 npm init                    # setup a repo to use npm, creates a package.json file
-npm install [dependency]    # install a dependency
+npm install [dependency]    # install a dependency, creates a node_modules directory
 ```
 
 `package.json` - Stores meta data about the project including a list of dependencies to install (committed to git).
@@ -103,17 +103,26 @@ npm install [dependency]    # install a dependency
 
 `node_modules/` - Location of dependencies installed locally (not commited to git).
 
-### Importing Libraries
+create a `.gitignore` file and add files that are untracked.
+
+If you are working as a team, when you `git pull`, also run `npm install` to update the `package.json` file.
+
+#### Importing Libraries 
 
 ```js
 // importing external libraries
-import path from "path";
+import module from "path";
 
-// default export (can only be used once)
+// export locally to another file (can only be used once)
+// can rename in the import file 
 export default module;
 import module from "path";
 
 // named export (for multiple functions)
 export { module_one, module_two };
-import { module_one, module_two } from "path";
+import { module_one, module_two as renamedmod_two } from "path";
 ```
+
+
+
+ 
