Week 3 Notes edits

--- a/1531.md
+++ b/1531.md
@@ -120,7 +120,7 @@ import module from "path";
 
 // named export (for multiple functions)
 export { module_one, module_two };
-import { module_one, module_two as renamedmod_two } from "path";
+import { module_one, module_two as renamedmod_one } from "path";
 ```
 
 
