--- a/1531.md
+++ b/1531.md
@@ -123,6 +123,37 @@ export { module_one, module_two };
 import { module_one, module_two as renamedmod_one } from "path";
 ```
 
+## Data interchange formats
+To enable this standard interface for data, we have data interchange formats:
+- `JSON` 
+- `YAML`
+- `XML`
 
+#### JSON
+- No trailing commas
+- Object keys must include " "
+```json
+{
+"locations": [ 
+  {
+    "suburb" : "Kensington",
+    "postcode": 2033
+  }, 
+  { 
+    "suburb" : "Mascot",
+    "postcode": 2020
+  }, 
+  { 
+    "suburb" : "Sydney CBD",
+    "postcode": 2000
+  }
+ ]
+}
+```
+
+- `JSON.stringify(data_structure)` to convert code to JSON strings
+- `fs.writeFileSync('file.json', data, { flag: 'w' })` to write
+- `fs.readFileSync('file.json', { flag: 'r' })` to read
+- `JSON.parse(data_structure)` to covert the JSON strings to code
 
  
