Week 3 Lecture 2 and Week 4 Lecture 1

--- a/1531.md
+++ b/1531.md
@@ -156,4 +156,81 @@ To enable this standard interface for data, we have data interchange formats:
 - `fs.readFileSync('file.json', { flag: 'r' })` to read
 - `JSON.parse(data_structure)` to covert the JSON strings to code
 
- 
+ ## Typescript
+TypeScript is a syntactic superset of JavaScript which adds static typing, allowing developers to add types.
+```ts
+function my_sum(a: number, b: number) {
+  return a + b;
+}
+console.log(my_sum(1, 2));
+```
+
+- `npm install --save-dev typescript ts-node` - dependency to use typescript
+- `./node_modules/.bin/ts-node file.ts` - compiles the .ts and runs it
+- `./node_modules/.bin/tsc --noImplicitAny file.ts.` - only compiles and checks for errors
+
+In typescript run `ts-node` instead of `node`, edit `package.json` file  
+
+```json
+"scripts": {
+  "ts-node": "ts-node",
+  "tsc": "tsc --noImplicitAny"
+}
+```
+
+#### Basic Types
+Basic types in TS are `number, string, boolean`
+
+#### Unions
+Are types that can be more than a single type
+`variable: number | boolean`
+
+#### Arrays
+Represented in TS as `Array<number>` or  `number[]`
+
+#### Aliases
+```ts
+type Listitem = string | number;
+
+const arr: Listitem[] = [];
+```
+
+#### Linting
+A linter does static analysis to identify style issues (white-space, indentation) and sematic issues (bad logic, bugs)
+
+## Advanced JS functions
+```js
+// Defining a function
+function sum(a, b) {
+  return a + b;
+}
+
+const sum = function(a, b) {
+  return a + b;
+}
+
+const sum = (a, b) => {
+  return a + b;
+}
+```
+
+- A first-class function can be treated like a variable and be passed into other functions
+
+#### Map
+Takes array of size N and producess a new array of size N, where all elements of array have been modified according to a function.
+```js
+newArray = array.map(function);
+```
+
+#### Filter
+Takes an array of size N, and produces a new array of size 0..N without modifying any of the data.
+```js
+newArray = array.filter(function);
+```
+
+#### Reduce
+Executes a reducer function (that you provide) on each member of the array resulting in a single output value.
+
+```js
+value = array.reduce(function, 0);
+```
