--- a/1531.md
+++ b/1531.md
@@ -234,3 +234,61 @@ Executes a reducer function (that you provide) on each member of the array resul
 ```js
 value = array.reduce(function, 0);
 ```
+
+#### Anonymous Functions
+If function is intended to be used only once, pass it directly into a function (without a name so anonymous function).
+```js
+const marks = [[65, 72, 81, 40, 56]];
+const pass = tutors.map((marks) => marks >= 50);
+```
+
+#### Callback function
+A callback is a function passed as an argument to another function, allowing functions to call other functions.
+
+#### Higher Order functions
+Are functions that take in functions as a parameter or returns a function.
+
+```js
+// congratMarkCR is basically the ret func with the markstr already set to credit.
+
+const genCongratMark = (markstr: string) => {
+  const ret = (name: string) => {
+    return `Congratulations ${name} on your ${markstr}`;
+  };
+  return ret;
+};
+const congratMarkPS = genCongratMark('pass');
+const congratMarkCR = genCongratMark('credit');
+const congratMarkDN = genCongratMark('distinction');
+console.log(congratMarkCR('Hayden'));
+```
+
+## HTTP Servers
+- **Network**: A group of interconnected computers that can **communicate**
+- Internet: A global infrastructure for networking computers around the entire world together
+- **World Wide Web**: A subset of the Internet consisting of the pages that can be accessed via URLs. 
+- **Protocal**: is a system of rules that define how data is exchanged within or between computers.
+ 
+HTTP (Hypertext Transfer Protocol) is a protocol that defines how data is transmitted over the internet or network, and it is the standard protocol used by web browsers and web servers.
+
+#### Express
+Express is a Node.js web application framework that allows you to run your own HTTP server. 
+
+#### API
+An API (Application Programming Interface) refers to an interface exposed by a particular piece of software.  
+The interface of the service acts as a black box and indicates that for particular endpoints, and given particular input, the client can expect to receive particular output.
+
+#### RESTful API
+An API that uses HTTP requests to **GET, PUT, POST and DELETE** data. 
+
+For inputs:
+- GET|DELETE: either via
+  - `req.query` (capture URL query string)
+  - `req.params` (capture URL path variable) 
+- PUT|POST: either via
+  - `req.body` (capture body)
+  - `req.params` (capture URL path variable) 
+- For outputs:
+  -  All outputs should be packaged up as JSON
+
+Use `app.use(express.json());` instead of `app.use(express.text());` to avoid `JSON.stringify` and `JSON.parse` functions.
