More https notes

--- a/1531.md
+++ b/1531.md
@@ -281,6 +281,8 @@ The interface of the service acts as a black box and indicates that for particul
 #### RESTful API
 An API that uses HTTP requests to **GET, PUT, POST and DELETE** data. 
 
+<img src="./images/restful.png" width="300" height="auto">
+
 For inputs:
 - GET|DELETE: either via
   - `req.query` (capture URL query string)
@@ -290,5 +292,9 @@ For inputs:
   - `req.params` (capture URL path variable) 
 - For outputs:
   -  All outputs should be packaged up as JSON
+
+
+For outputs:
+  - All outputs should be packaged up as JSON
 
 Use `app.use(express.json());` instead of `app.use(express.text());` to avoid `JSON.stringify` and `JSON.parse` functions.
