Persistence lecture notes

--- a/1531.md
+++ b/1531.md
@@ -298,3 +298,16 @@ For outputs:
   - All outputs should be packaged up as JSON
 
 Use `app.use(express.json());` instead of `app.use(express.text());` to avoid `JSON.stringify` and `JSON.parse` functions.
+
+## Persistence
+**Data**: facts that can be recorded and have implicit meaning
+ - From data(raw) we can find insights (information) that allows us to make decisions.
+
+**Database**: Used to descibe a store of data, three ways to store data: 
+  - In-memory
+  - In-file
+  - In-database
+
+**Persistence**:  when program state outlives the process that created it. This is achieved by storing the state as data in computer data storage.
+
+Note: In COMP1531 the extent of persistence is just storing the data in a file. 
