Exception lecture notes

--- a/1531.md
+++ b/1531.md
@@ -311,3 +311,38 @@ Use `app.use(express.json());` instead of `app.use(express.text());` to avoid `J
 **Persistence**:  when program state outlives the process that created it. This is achieved by storing the state as data in computer data storage.
 
 Note: In COMP1531 the extent of persistence is just storing the data in a file. 
+
+## Exceptions
+Exceptions is an action that disrupts the normal flow of the program. (Crashes the program)
+
+Instead of `process.exit(1)`, use exceptions:
+```js
+const errorFunction = () => {
+  throw new Error('Error: error message');
+}
+
+try { 
+  errorFunction();
+} catch (err) {
+  console.error(`Error: ${err.message}`);
+}
+```
+
+So when the error is thrown, then `errorFunction` is popped off the stack and it goes into the `catch` statement in the function that called it
+
+#### Testing for Exceptions
+```js
+test ('Exception Test', () => {
+    expect(() => errorFunction()).toThrow('Error: error message');
+    expect(() => errroFunction()).toThrowError('Error: error message');
+});
+
+// The expect works as below 
+function expect(fn) {
+  try {
+    fn();
+  } catch (err) {
+    // stuff
+  }
+}
+```
