--- a/1531.md
+++ b/1531.md
@@ -299,6 +299,23 @@ For outputs:
 
 Use `app.use(express.json());` instead of `app.use(express.text());` to avoid `JSON.stringify` and `JSON.parse` functions.
 
+When sending HTTP request, you need to send a **JSON string**
+
+```js
+const res = request('POST', `${url}:${port}/v1/admin/auth/logout`, {
+      body: { token: 25 },
+      headers: { 'Content: type': 'application/json' },
+    });
+```
+
+```js
+   const res = request('POST', `${url}:${port}/v1/admin/auth/logout`, {
+      json: {
+        token: 25
+      },
+    });
+```
+
 ## Persistence
 **Data**: facts that can be recorded and have implicit meaning
  - From data(raw) we can find insights (information) that allows us to make decisions.
