Auth notes and change CRUD

--- a/1531.md
+++ b/1531.md
@@ -217,7 +217,7 @@ const sum = (a, b) => {
 - A first-class function can be treated like a variable and be passed into other functions
 
 #### Map
-Takes array of size N and producess a new array of size N, where all elements of array have been modified according to a function.
+Takes array of size N and produces a new array of size N, where all elements of array have been modified according to a function.
 ```js
 newArray = array.map(function);
 ```
@@ -285,17 +285,16 @@ An API that uses HTTP requests to **GET, PUT, POST and DELETE** data.
 
 For inputs:
 - GET|DELETE: either via
-  - `req.query` (capture URL query string)
-  - `req.params` (capture URL path variable) 
+  - `req.query` (capture URL query string) - unencrypted
+  - `req.params` (capture URL path variable) - unencrypted
+  - `req.headers` (capture headers) - encrypted
 - PUT|POST: either via
-  - `req.body` (capture body)
-  - `req.params` (capture URL path variable) 
+  - `req.query` (capture URL query string) - unencrypted
+  - `req.params` (capture URL path variable)- unencrypted
+  - `req.body` (capture request body data) - encrypted
+  - `req.headers` (capture headers) - encrypted
 - For outputs:
   -  All outputs should be packaged up as JSON
-
-
-For outputs:
-  - All outputs should be packaged up as JSON
 
 Use `app.use(express.json());` instead of `app.use(express.text());` to avoid `JSON.stringify` and `JSON.parse` functions.
 
@@ -320,7 +319,7 @@ const res = request('POST', `${url}:${port}/v1/admin/auth/logout`, {
 **Data**: facts that can be recorded and have implicit meaning
  - From data(raw) we can find insights (information) that allows us to make decisions.
 
-**Database**: Used to descibe a store of data, three ways to store data: 
+**Database**: Used to describe a store of data, three ways to store data: 
   - In-memory
   - In-file
   - In-database
@@ -363,3 +362,16 @@ function expect(fn) {
   }
 }
 ```
+
+## Authentication
+- **Authentication**: Process of verifying the identity of a user (E.g. checking username and password)
+- **Authorisation**: Process of determining an authenticated user's access privileges (E.g. checking if admin or not)
+
+**Hashing**
+- Hash functions are mathematical functions that transform a given set of data into a bit string of fixed size known as a "hash value" (used in cryptography) - irreversible
+
+**Encryption**
+- Encryption is the process of protecting information or data by using mathematical models to scramble it in such a way that only the parties who have the key to unscramble it can access it - reversible.
+- To decode the data back to plaintext requires the use of a decryption key, a string of numbers or a password.
+
+**Encryption** and **Hashing** are both processes of taking plaintext information and turning it into a random string of characters.
