Week 7 Notes Auth and Deployment

--- a/1531.md
+++ b/1531.md
@@ -375,3 +375,18 @@ function expect(fn) {
 - To decode the data back to plaintext requires the use of a decryption key, a string of numbers or a password.
 
 **Encryption** and **Hashing** are both processes of taking plaintext information and turning it into a random string of characters.
+
+## Deployment
+Activities relating to making a software system available for use
+
+#### Cloud Services
+Numerous cloud services offer the ability to "easily" deploy your web applications. Examples include:
+- Amazon Web Services 
+- Google App Engine 
+- Heroku
+
+#### Continuous Delivery
+Allows accepted code changes to be deployed to customers quickly and sustainably.
+- This involves the automation of the release process such that releases can be done in a "button push".
+- Many companies will have a daily or weekly deployment or "ship".
+-  To "ship" code there is a "sign off" process (human intervention) to deploy the code.
