--- a/1531.md
+++ b/1531.md
@@ -249,7 +249,7 @@ A callback is a function passed as an argument to another function, allowing fun
 Are functions that take in functions as a parameter or returns a function.
 
 ```js
-// congratMarkCR is basically the ret func with the markstr already set to credit.
+// congratMarkCR is basically the ret func with the markstr already set to pass/credit/distinction.
 
 const genCongratMark = (markstr: string) => {
   const ret = (name: string) => {
