encryption stuff for crud

--- a/1531.md
+++ b/1531.md
@@ -296,6 +296,8 @@ For inputs:
 - For outputs:
   -  All outputs should be packaged up as JSON
 
+<img src="./images/en.png" width="500" height="auto">
+
 Use `app.use(express.json());` instead of `app.use(express.text());` to avoid `JSON.stringify` and `JSON.parse` functions.
 
 When sending HTTP request, you need to send a **JSON string**
@@ -390,3 +392,16 @@ Allows accepted code changes to be deployed to customers quickly and sustainably
 - This involves the automation of the release process such that releases can be done in a "button push".
 - Many companies will have a daily or weekly deployment or "ship".
 -  To "ship" code there is a "sign off" process (human intervention) to deploy the code.
+
+## Coverage
+- **Test Coverage**: a measure of how much of the feature set is covered with tests. This is often left to human judgement
+  
+- **Code coverage**: a measure of how much code is executed during testing. This can be computed and quantified
+
+- Run `jest --coverage` to run tests with coverage on.
+  
+- You can access an HTML summary in `coverage/lcov-report/index.html`.
+
+#### Branch Coverage Checking
+- A program can jump from one line to another so you must check how many branches were tested during execution.
+- Branch coverage is a more accurate measurement so you should use it instead of statement coverage.
