Conceptual Modelling Notes

--- a/1531.md
+++ b/1531.md
@@ -364,6 +364,28 @@ function expect(fn) {
   }
 }
 ```
+## Conceptual Modelling
+A` model` is a simplified representation to assist in understanding something more complex.
+
+A `conceptual model` is a type of model that captures a system in a conceptual way rather
+than a physical way.
+They tend to be diagramatic or visual.
+
+### State Diagrams
+A diagrammatic representation of a state.
+- States are circles
+- Transitions are labelled arrows connecting them
+
+Simple example: A door
+
+<img src="./images/st.png" width="300" height="auto">
+
+<br>
+
+- State diagrams are used to describe state machines.
+- **State machines** are made up of a finite number of states. 
+  - Example: UI with different screens
+
 
 ## Authentication
 - **Authentication**: Process of verifying the identity of a user (E.g. checking username and password)
