Conceptual Modelling Notes

--- a/1531.md
+++ b/1531.md
@@ -386,6 +386,7 @@ Simple example: A door
 - **State machines** are made up of a finite number of states. 
   - Example: UI with different screens
 
+<img src="./images/park.png" width="500" height="auto">
 
 ## Authentication
 - **Authentication**: Process of verifying the identity of a user (E.g. checking username and password)
