--- a/1531.md
+++ b/1531.md
@@ -428,3 +428,14 @@ Allows accepted code changes to be deployed to customers quickly and sustainably
 #### Branch Coverage Checking
 - A program can jump from one line to another so you must check how many branches were tested during execution.
 - Branch coverage is a more accurate measurement so you should use it instead of statement coverage.
+
+## Requirements
+A condition or capability needed by a user to solve a problem or achieve an objective
+
+### Functional vs Non-Functional Requirements
+- Functional Requirements
+  - Statements of services the system should provide, how the system should react to particular inputs and how the system should behave in particular situations.
+  - May state what the system should not do.
+- Non-functional Requirements
+  - Constraints on the services or functions offered by the system such as timing
+constraints, constraints on the development process, standards, etc
