--- a/1531.md
+++ b/1531.md
@@ -439,3 +439,8 @@ A condition or capability needed by a user to solve a problem or achieve an obje
 - Non-functional Requirements
   - Constraints on the services or functions offered by the system such as timing
 constraints, constraints on the development process, standards, etc
+
+### Validation
+**Verification** - System has been built right  
+
+**Validation** - Right system has been built
