--- a/1531.md
+++ b/1531.md
@@ -15,17 +15,49 @@ _TUTORIAL CODE LINK - https://nw-syd-gitlab.cseunsw.tech/z5363488/comp1531-23t3-
 ## Git Commands
 
 ```bash
-$ git clone <repo>                  # clone repo to current directory
-$ git add                           # git add --all to stage all changes
-$ git commit -m                     # commit any staged files
-$ git push                          # push changes to remote repo
-$ git pull                          # pull changes from remote repo
-$ git status                        # check any stages, unstaged or untracked files
-$ git log                           # check commit log
-$ git checkout "branch"             # switch to branch
-$ git checkout -b "branch_name"     # create a new branch
-$ git push -u origin "branch_name"  # initialise new branch in remote repo
-$ git merge "branch_name"           # merge branch_name to main branch
+  # clone repo to current directory
+  git clone <repo>                 
+
+  # --all flag to stage all changes
+  git add                          
+
+  # commit any staged files
+  git commit -m        
+
+  # push changes to remote repo            
+  git push      
+
+  # pull changes from remote repo                  
+  git pull         
+
+  # check any stages, unstaged or untracked files               
+  git status
+
+  # check commit log                        
+  git log           
+
+  # switch to branch
+  git checkout [branch]     
+
+  # create a new branch        
+  git checkout -b [branch_name]   
+
+  # initialise new branch in remote repo  
+  git push -u origin "branch_name" 
+
+  # merge branch_name to main branch 
+  git merge "branch_name"           
+```
+## Git Undo
+```bash
+# Sets all code to specific commit hash (removing ALL changes since that commit)
+git reset --hard [hash]
+
+# Keeps all of your current code, but changes what commit you're pointing to
+git reset --soft [hash]
+
+# Updating previous commit name
+git commit --ammend -m "Commit"
 ```
 
 ## Javascript
@@ -440,7 +472,6 @@ A condition or capability needed by a user to solve a problem or achieve an obje
   - Constraints on the services or functions offered by the system such as timing
 constraints, constraints on the development process, standards, etc
 
-### Validation
+## Validation
 **Verification** - System has been built right  
-
 **Validation** - Right system has been built
