Individual project notes

--- a/1531.md
+++ b/1531.md
@@ -475,3 +475,46 @@ constraints, constraints on the development process, standards, etc
 ## Validation
 **Verification** - System has been built right  
 **Validation** - Right system has been built
+
+## Individual-Project 
+`1531 dryrun indivdualproject`
+
+```js
+// To view the dryrun
+cat ~cs1531/bin/indivdualproject.test.py
+
+// To copy it into your current folder
+cp ~cs1531/bin/indivdualproject.test.py .
+
+// To run it locally
+python3 indivdualproject.test.py
+```
+
+- A todoItem may have a deadline. Meeting or failing this deadline determines the score. Have a look at the model in `GET/todo/item` for details.
+The score is determined when a terminal state is reached, namely the `"DONE"` state.
+
+- Null values should be passed as a `string` for routes that use query parameters `(GET/DELETE)`. 
+
+```js
+const queryRequest = request(
+  'GET',
+  'https://example.com/echo',
+  {
+    qs: { parameter: 'null' },
+  }
+);
+```
+- Literal null for routes that use body parameters (POST/PUT).
+```js
+const queryRequest = request(
+  'POST',
+  'https://example.com/echo',
+  {
+    json: { parameter: null },
+  }
+);
+```
+
+
+
+
