Final project done

--- a/1531.md
+++ b/1531.md
@@ -477,7 +477,7 @@ constraints, constraints on the development process, standards, etc
 **Validation** - Right system has been built
 
 ## Individual-Project 
-`1531 dryrun indivdualproject`
+`1531 dryrun individualproject`
 
 ```js
 // To view the dryrun
