Change all bolds to

--- a/1531.md
+++ b/1531.md
@@ -66,8 +66,8 @@ Javascript is a high level, dynamically typed, interpreted, object-oriented lang
 
 #### Node
 
-- NodeJS is a command line interface that **interprets** Javascript code within a runtime environment that is built on Google's V8 engine.
-- NodeJS is an **interpreted language** instead of a compiled language, meaning it is compiled and run as part of the same step.
+- NodeJS is a command line interface that `interprets` Javascript code within a runtime environment that is built on Google's V8 engine.
+- NodeJS is an `interpreted language` instead of a compiled language, meaning it is compiled and run as part of the same step.
 
 #### Variables, Printing
 
@@ -296,10 +296,10 @@ console.log(congratMarkCR('Hayden'));
 ```
 
 ## HTTP Servers
-- **Network**: A group of interconnected computers that can **communicate**
+- `Network`: A group of interconnected computers that can `communicate`
 - Internet: A global infrastructure for networking computers around the entire world together
-- **World Wide Web**: A subset of the Internet consisting of the pages that can be accessed via URLs. 
-- **Protocal**: is a system of rules that define how data is exchanged within or between computers.
+- `World Wide Web`: A subset of the Internet consisting of the pages that can be accessed via URLs. 
+- `Protocal`: is a system of rules that define how data is exchanged within or between computers.
  
 HTTP (Hypertext Transfer Protocol) is a protocol that defines how data is transmitted over the internet or network, and it is the standard protocol used by web browsers and web servers.
 
@@ -311,7 +311,7 @@ An API (Application Programming Interface) refers to an interface exposed by a p
 The interface of the service acts as a black box and indicates that for particular endpoints, and given particular input, the client can expect to receive particular output.
 
 #### RESTful API
-An API that uses HTTP requests to **GET, PUT, POST and DELETE** data. 
+An API that uses HTTP requests to `GET, PUT, POST and DELETE` data. 
 
 <img src="./images/restful.png" width="300" height="auto">
 
@@ -332,7 +332,7 @@ For inputs:
 
 Use `app.use(express.json());` instead of `app.use(express.text());` to avoid `JSON.stringify` and `JSON.parse` functions.
 
-When sending HTTP request, you need to send a **JSON string**
+When sending HTTP request, you need to send a `JSON string`
 
 ```js
 const res = request('POST', `${url}:${port}/v1/admin/auth/logout`, {
@@ -350,15 +350,15 @@ const res = request('POST', `${url}:${port}/v1/admin/auth/logout`, {
 ```
 
 ## Persistence
-**Data**: facts that can be recorded and have implicit meaning
+`Data`: facts that can be recorded and have implicit meaning
  - From data(raw) we can find insights (information) that allows us to make decisions.
 
-**Database**: Used to describe a store of data, three ways to store data: 
+`Database`: Used to describe a store of data, three ways to store data: 
   - In-memory
   - In-file
   - In-database
 
-**Persistence**:  when program state outlives the process that created it. This is achieved by storing the state as data in computer data storage.
+`Persistence`:  when program state outlives the process that created it. This is achieved by storing the state as data in computer data storage.
 
 Note: In COMP1531 the extent of persistence is just storing the data in a file. 
 
@@ -415,23 +415,23 @@ Simple example: A door
 <br>
 
 - State diagrams are used to describe state machines.
-- **State machines** are made up of a finite number of states. 
+- `State machines` are made up of a finite number of states. 
   - Example: UI with different screens
 
 <img src="./images/park.png" width="500" height="auto">
 
 ## Authentication
-- **Authentication**: Process of verifying the identity of a user (E.g. checking username and password)
-- **Authorisation**: Process of determining an authenticated user's access privileges (E.g. checking if admin or not)
+- `Authentication`: Process of verifying the identity of a user (E.g. checking username and password)
+- `Authorisation`: Process of determining an authenticated user's access privileges (E.g. checking if admin or not)
 
-**Hashing**
+`Hashing`
 - Hash functions are mathematical functions that transform a given set of data into a bit string of fixed size known as a "hash value" (used in cryptography) - irreversible
 
-**Encryption**
+`Encryption`
 - Encryption is the process of protecting information or data by using mathematical models to scramble it in such a way that only the parties who have the key to unscramble it can access it - reversible.
 - To decode the data back to plaintext requires the use of a decryption key, a string of numbers or a password.
 
-**Encryption** and **Hashing** are both processes of taking plaintext information and turning it into a random string of characters.
+`Encryption` and `Hashing` are both processes of taking plaintext information and turning it into a random string of characters.
 
 ## Deployment
 Activities relating to making a software system available for use
@@ -449,9 +449,9 @@ Allows accepted code changes to be deployed to customers quickly and sustainably
 -  To "ship" code there is a "sign off" process (human intervention) to deploy the code.
 
 ## Coverage
-- **Test Coverage**: a measure of how much of the feature set is covered with tests. This is often left to human judgement
+- `Test Coverage`: a measure of how much of the feature set is covered with tests. This is often left to human judgement
   
-- **Code coverage**: a measure of how much code is executed during testing. This can be computed and quantified
+- `Code coverage`: a measure of how much code is executed during testing. This can be computed and quantified
 
 - Run `jest --coverage` to run tests with coverage on.
   
@@ -473,8 +473,8 @@ A condition or capability needed by a user to solve a problem or achieve an obje
 constraints, constraints on the development process, standards, etc
 
 ## Validation
-**Verification** - System has been built right  
-**Validation** - Right system has been built
+`Verification` - System has been built right  
+`Validation` - Right system has been built
 
 ## Individual-Project 
 `1531 dryrun individualproject`
