Include table of contents for reference

--- a/1531.md
+++ b/1531.md
@@ -1,5 +1,20 @@
 # 1531 - Software Engineering Fundamentals
 
+- [General Info](1531.md#general-info)
+- [Git Commands](1531.md#git-commands)
+- [Javascript Basics](1531.md#javascript)
+- [npm](1531.md#npm-node-package-manager)
+- [Data Interchangable Formats](1531.md#data-interchange-formats)
+- [Typescript](1531.md#typescript)
+- [Advanced js functions](1531.md#advanced-js-functions)
+- [HTTP Servers](1531.md#http-servers)
+- [Persistence](1531.md#persistence)
+- [Exceptions](1531.md#exceptions)
+- [Conceptual Modelling](1531.md#conceptual-modelling)
+- [Authentication](1531.md#authentication)
+- [Deployment](1531.md#deployment)
+- [Coverage](1531.md#coverage)
+
 ## General Info
 
 Course Email: cs1531@cse.unsw.edu.au
